empty notif placeholder + fixed flicker

--- a/FLOW/www/css/myAccount.css
+++ b/FLOW/www/css/myAccount.css
@@ -254,6 +254,8 @@
 	opacity: 0;
 	pointer-events: none;
 	transition-duration: 0.3s;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
 }
 
 #feditProfilePopupContainer {
@@ -357,6 +359,7 @@
 	font-family: Roboto-Regular;
 	color: #92abb2;
 }
+
 .shake {
 	animation: shake 0.3s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
